# geo-rag-planning-assistant

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_vector_db.py  docker-compose.yml  import_spatial_data.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
Backend/: .env.example  README.md  check_database.py  check_policy_chunks.py  create_vector_index.py  main.py  requirements.txt  restart.bat  test_policy_chunks.py  test_spatial_db.py
Backend/app/: __init__.py
Backend/app/api/: __init__.py  auth_routes.py  chat_routes.py  document_routes.py  search_routes.py  spatial_routes.py  system_routes.py
Backend/app/core/: __init__.py  auth.py  config.py  database.py  llm_config.py  security.py
Backend/app/models/: __init__.py  chat_models.py  document_models.py  search_models.py  spatial_models.py
Backend/app/services/: __init__.py  chat_service.py  demo_quota_service.py  document_asset_service.py  document_contract_service.py  document_indexing_service.py  document_lifecycle_service.py  document_repository.py  document_service.py  document_text_extractor.py  search_feedback_service.py  search_service.py  spatial_service.py  vector_service.py
Backend/app/services/rag/: __init__.py  filters.py  reranker.py  retriever.py  search_logger.py  types.py
Backend/app/worker/: celery_app.py  document_tasks.py
Backend/migrations/: 20260617_api_contract_tables.sql  20260618_document_lifecycle.sql
Backend/scripts/: import_document_assets.py
Backend/tests/: test_api_contract_models.py  test_api_contract_openapi.py  test_chat_intent.py  test_chat_service.py  test_demo_auth.py  test_demo_quota_service.py  test_document_celery_app.py  test_document_contract_service.py  test_document_indexing_service.py  test_document_lifecycle_service.py  test_document_migration_contract.py  test_document_text_extractor.py  test_document_upload_optional.py  test_rag_metadata_filters.py  test_rag_reranker.py  test_rag_retriever_degradation.py  test_rag_spatial_filters.py  test_search_demo_quota.py  test_search_evidence_formatting.py  test_search_follow_up.py  test_search_logger.py  test_search_service_standard_code.py  test_search_uploaded_documents.py
config/: __init__.py  development.yaml  logging.conf  pachong.py  production.yaml
docker/: Dockerfile  nginx.conf
docs/: AUTH_BOOT_DEPLOY.md  DEPLOY.md  PRD.md  RAG_SEARCH_FILTERS_RERANK.md  RELEASE_WORKFLOW.md  architecture_audit_prd_2026-06-16.md  legacy_README.txt  memory_share.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: check-api-contract-usage.mjs  check-text-encoding.mjs  export-openapi.mjs  sync-cesium-assets.mjs  sync-cesium-assets.ps1
frontend/src/: App.tsx  RootApp.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/auth/: AuthProvider.tsx  ProtectedRoute.tsx
frontend/src/components/: BootScreen.tsx  CesiumGlobe.tsx  Chat.tsx  LoadingIndicator.tsx  OpenLayersMap.tsx
frontend/src/hooks/: useAutoScroll.ts
frontend/src/lib/: bootstrap.ts  glass.ts  mapViewport.ts  theme.ts
frontend/src/lib/api/: config.ts  contractClient.ts
frontend/src/pages/: LoginPage.tsx
frontend/src/services/: authService.ts  chatService.ts  documentService.ts  searchService.ts
frontend/src/store/: useMapStore.ts
frontend/src/types/: api.ts  index.ts
frontend/tests/: 1121.html  bootScreenMotion.test.ts  documentDetailTheme.test.ts  index.js  loginMotion.test.ts  mapViewport.test.ts
frontend/tests/cesium鼠标交互测试/: CesiumViewer.jsx  Controls.jsx  ErrorBoundary.jsx  Sidebar.jsx  cesiumUtils.js  index.html  index.jsx  layerManager.js  measurement.js  styles.css  vite.config.js
scripts/: build_vector_db.py  clean_and_rebuild.py  deploy_frontend_build.mjs  export_deploy_db_assets.py  export_openapi.py  fix_db_schema.py  import_spatial_data.py  run_gui.py  test_simple.py  test_structure.py  validate_rag_search_scenarios.py  verify_data.py  verify_search_logs_migration.py
src/geoai/api/: main.py
src/geoai/core/: config.py
src/geoai/data/: crawler.py  extractor.py  processor.py
src/geoai/spatial/: importer.py
src/geoai/utils/: utils.py
src/geoai/web/: gui.py
tests/unit/: check_db61.py  check_mysql.py  check_mysql2.py  test_build.py  test_build_small.py  test_config.py  test_extract.py  test_metadata.py  test_metadata2.py  test_mysql.py  test_mysql_connection.py  test_mysql_match.py  test_regex.py
